:pencil: Updated VJ desc

--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,7 +1,7 @@
 - title: Virtual Jane
   url: http://virtualjane.gwic.io
   img: img/jane-goodall.jpg
-  description: The Virtual Jane project tells the story of Jane Goodall (primatologist, conservationist, and childhood hero) in a virtual reality mobile application. The <a href="http://gwic.io">GW Innovation Center</a> is collaborating with the Jane Goodall Institute to create an immersive educational and recreation experience.
+  description: The Virtual Jane project tells the story of Jane Goodall (primatologist, conservationist, and childhood hero) in a virtual reality mobile application. The <a href="http://gwic.io">GW Innovation Center</a> is currently developing new curriculum programs to teach students at GWU to leverage tech for social good.
   news: https://gwtoday.gwu.edu/bringing-dr-jane-goodall%E2%80%99s-mission-digital-age
 - title: Evolution of Innovation
   url: http://rbsteed.com/datamaster
