--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -3,11 +3,13 @@
   img: img/jane-goodall.jpg
   description: The Virtual Jane project tells the story of Jane Goodall (primatologist, conservationist, and childhood hero) in a virtual reality mobile application. The <a href="http://gwic.io">GW Innovation Center</a> is currently developing new curriculum programs to teach students at GWU to leverage tech for social good.
   news: https://gwtoday.gwu.edu/bringing-dr-jane-goodall%E2%80%99s-mission-digital-age
+  featured: true
 - title: Evolution of Innovation
   url: http://rbsteed.com/datamaster
   img: img/network.png
   description: Innovation is important to growth and welfare, and nations sponsor research and craft legislation to encourage it. But how can we measure the impact of these investments? This research measures the spread of innovation with patent citation network analysis and explores the effect of recent legislation on knowledge flows between inventions.
   github: ryansteed/datamaster
+  featured: true
 - title: Magic Number
   url: https://magicnumberip.com
   img: img/patent_forecast.png
@@ -15,6 +17,7 @@
 - title: IWP5
   url: http://www.iwphys.org
   img: img/iwp5.png
+  img-size: 90%
   description: Interactive Web Physics Version 5 is an HTML5/JavaScript/D3 physics simulation applet built for classroom use. Build and visualize physics simulations using parametric and Euler's calculations.
   github: ntbrock/iwphys
 - title: Star Skirmish
@@ -25,7 +28,7 @@
 - title: Thisfits
   url: http://thisfits.io
   img: img/thisfits.png
-  img-size: 50%
+  img-size: 60%
   description: To communalize the fashion process, the Thisfits team is building a streamlined social media app for real-time fashion feedback
           and documentation. Thisfits features social feeds where friends and strangers can collaborate on outfits and pieces.
   news: https://www.gwhatchet.com/2018/11/12/students-create-social-app-to-provide-style-advice/?fbclid=IwAR39mUl-Sf8RMJI8YFhPQMHgxzjkdvUxSRs-7HJGDV_d4hP4uZ9RjVjFIqQ
