--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,4 @@
 - header: AIES-2020
-  message: I'll be hanging out at AIES-2020, my first AI conference! Say hi if you're around - I'm excited to learn about new work in the field.
+  message: I'll be hanging out at AIES-2020! Say hi if you're around - I'm excited to learn about new work in the field.
   date: 2/6/20
   link: https://www.aies-conference.com/2020/
