--- a/_data/research.yml
+++ b/_data/research.yml
@@ -1,12 +1,16 @@
 - id: current
-  subject: Current
+  subject: Recent
   data:
+    - title: Machines Learn Appearance Bias in Face Recognition
+      date: 2020
+      url: docs/appearance-bias.pdf
+      authors:
+        - Aylin Caliskan
+      meta: Under review.
     - title: Heuristic Moral Decision-Making with Weak Supervision
       date: 2019
       meta: Thesis.
-    - title: Sociocultural Bias in Face Recognition
-      date: 2019
-    - title: "The Grand Narrative: A History of Economics in Data"
+    - title: "The Grand Narrative: A Course on the History of Economics in Data"
       date: 2019
     - title: The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation
       date: 2019
@@ -26,17 +30,26 @@
       date: 2018
       url: docs/ml-document-classification.html
       meta: Tech talk presented at GWU ACM.
-    - title: The Derivative Relational Attribute Graph Model for Link Prediction
-      date: 2017
-      url: docs/drag.pdf
     - title: The Practice and Promise of Open Source Intelligence and Computational Security Studies
       date: 2017
       url: https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf
       meta: Presented at International Studies Association South Annual Conference, Orlando.
+      authors:
+        - W. A. Rivera
+        - Abbey Rogers
     - title: A Deep Learning Approach for CAMEO Coding
       date: 2017
       url: docs/event-coding.pdf
       meta: Presented at ISA South Conference, Orlando.
+      authors:
+        - Max Erdemandi
+        - Rachel Augustine
+        - Lin Zhao
+    - title: The Derivative Relational Attribute Graph Model for Link Prediction
+      date: 2017
+      url: docs/drag.pdf
+      authors:
+        - W. A. Rivera
 - id: phil
   subject: Philosophy
   data:
