:pencil: Updated tehsis description

--- a/_data/research.yml
+++ b/_data/research.yml
@@ -9,7 +9,7 @@
       meta: Under review.
     - title: Heuristic Moral Decision-Making with Weak Supervision
       date: 2019
-      meta: Thesis.
+      meta: Working thesis.
     - title: "The Grand Narrative: A Course on the History of Economics in Data"
       date: 2019
     - title: The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation
