:sparkles: Added top n for awards

--- a/_data/research.yml
+++ b/_data/research.yml
@@ -23,6 +23,7 @@
       date: 2019
       url: docs/research-days_2019.pdf
       meta: 2<sup>nd</sup> Prize, GW Research Days.
+      top: 5
     - title: Effect of Religious Diversity on Growth
       date: 2018
       url: docs/religious-growth.pdf
