--- a/_data/research.yml
+++ b/_data/research.yml
@@ -1,5 +1,5 @@
-- id: current
-  subject: Recent
+- id: ongoing
+  subject: Ongoing
   data:
     - title: Machines Learn Appearance Bias in Face Recognition
       date: 2020
@@ -12,25 +12,23 @@
       meta: Working thesis.
     - title: "The Grand Narrative: A Course on the History of Economics in Data"
       date: 2019
+      authors:
+        - Rahul Simha
+        - Ruoyu Chen
+        - Kristin Carline
+        - Bill Edison
     - title: The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation
       date: 2019
       url: docs/datamaster/manuscript.pdf
       meta: Working paper.
-- id: data-sci
-  subject: Data Science
+- id: publications
+  subject: Publications
   data:
     - title: Evolution of Innovation in Patent Citation Networks
       date: 2019
       url: docs/research-days_2019.pdf
       meta: 2<sup>nd</sup> Prize, GW Research Days.
       top: 5
-    - title: Effect of Religious Diversity on Growth
-      date: 2018
-      url: docs/religious-growth.pdf
-    - title: ML Document Classification
-      date: 2018
-      url: docs/ml-document-classification.html
-      meta: Tech talk presented at GWU ACM.
     - title: The Practice and Promise of Open Source Intelligence and Computational Security Studies
       date: 2017
       url: https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf
@@ -51,8 +49,8 @@
       url: docs/drag.pdf
       authors:
         - W. A. Rivera
-- id: phil
-  subject: Philosophy
+- id: manuscripts
+  subject: Manuscripts
   data:
     - title: A Pragmatic Argument for Experimental Welfare Policy
       date: 2019
@@ -63,10 +61,12 @@
     - title: "AI is Heideggerian Enough, But Can It Be Authentic?"
       date: 2019
       url: docs/heideggerian-ai.pdf
-      meta: Working paper.
-    - title: "Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza"
+    - title: Effect of Religious Diversity on Growth
       date: 2018
-      url: docs/descartes-spinoza.pdf
+      url: docs/religious-growth.pdf
+    # - title: "Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza"
+    #   date: 2018
+    #   url: docs/descartes-spinoza.pdf
     # - title: "Constructive Intolerance: A Critique of Laissez-Faire Liberalism"
     #   date: 2018
     #   url: docs/mill.pdf
@@ -76,3 +76,11 @@
     - title: "From Plato to Popper: Platonic Forms in Modern Science and Quantum Theory"
       date: 2017
       url: docs/plato-popper.pdf
+      meta: Winner of the GWU Honors Program Strasser Writing Prize.
+- id: talks
+  subject: Talks & Presentations
+  data:
+    - title: ML Document Classification
+      date: 2018
+      url: docs/ml-document-classification.html
+      meta: Tech talk presented at GWU ACM.
