--- a/_data/research.yml
+++ b/_data/research.yml
@@ -27,7 +27,7 @@
     - title: Evolution of Innovation in Patent Citation Networks
       date: 2019
       url: docs/research-days_2019.pdf
-      meta: 2<sup>nd</sup> Prize, GW Research Days.
+      meta: 2<sup>nd</sup> Prize, GW Research Showcase.
       top: 5
     - title: The Practice and Promise of Open Source Intelligence and Computational Security Studies
       date: 2017
