:arrow_upper_right: Thesis link

--- a/_data/research.yml
+++ b/_data/research.yml
@@ -9,7 +9,8 @@
       meta: Under review.
     - title: Heuristic Moral Decision-Making with Weak Supervision
       date: 2019
-      meta: Working thesis.
+      meta: Undergraduate thesis.
+      url: https://arxiv.org/abs/2005.02342
     - title: "The Grand Narrative: A Course on the History of Economics in Data"
       date: 2019
       authors:
