:sparkles: thesis announcement

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,3 +2,7 @@
   message: I'll be hanging out at AIES-2020! Say hi if you're around - I'm excited to learn about new work in the field.
   date: 2/6/20
   link: https://www.aies-conference.com/2020/
+- header: Undergrad Thesis
+  message: I'm very proud to have (virtually) defended my undergrad thesis in front of a wonderful committee of GWU faculty.
+  date: 4/28/20
+  link: https://arxiv.org/abs/2005.02342
