--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,6 +3,6 @@
   date: 2/6/20
   link: https://www.aies-conference.com/2020/
 - header: Undergrad Thesis
-  message: I'm very proud to have (virtually) defended my undergrad thesis in front of a wonderful committee of GWU faculty.
+  message: I'm very proud to have (virtually) defended my undergraduate thesis in front of a wonderful committee of GWU faculty.
   date: 4/28/20
   link: https://arxiv.org/abs/2005.02342
