--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,7 @@
+- header: PhD @ CMU
+  message: I'm excited to be joining Carnegie Mellon's Heinz College of Information Systems & Public Policy to start my PhD this fall. Thank you to all the wonderful people who helped me along the way!
+  date: 4/30/20
+  link: https://www.heinz.cmu.edu
 - header: AIES-2020
   message: I'll be hanging out at AIES-2020! Say hi if you're around - I'm excited to learn about new work in the field.
   date: 2/6/20
