:sparkles: PAML announcement

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,7 @@
+- header: PAML @ ICML 2020
+  message: Our paper was accepted to the Participatory Approaches to Machine Learning workshop! We propose and test an alternative way to elicit & incorporate stakeholder preferences in ML systems.
+  date: 7/10/20
+  link: https://participatoryml.github.io/
 - header: PhD @ CMU
   message: I'm excited to be joining Carnegie Mellon's Heinz College of Information Systems & Public Policy to start my PhD this fall. Thank you to all the wonderful people who helped me along the way!
   date: 5/15/20
