--- a/_data/portfolio.yml
+++ b/_data/portfolio.yml
@@ -1,7 +1,7 @@
-- title: Heuristic Moral Machines
+- title: Heuristic-Based Collective Participation
   url: https://rbsteed.com/heuristic-moral-machine
   img: img/hmm.jpg
-  description: As automation proliferates and algorithms become increasingly responsible for high-stakes decision-making, AI agents face moral dilemmas in fields ranging from market design to robots. To lower the barrier to training moral agents, this research develops a heuristic-based weak learning approach to moral decision-making.
+  description: As algorithms become increasingly responsible for high-stakes decision-making, it is important for stakeholders and affected users to have influence over algorithmic policy. To lower the barrier to collective participation in ML systems, this research proposes an alternative method for incorporating stakeholder preferences in ML systems.
   github: ryansteed/heuristic-moral-machine
 - title: Evolution of Innovation
   url: http://rbsteed.com/datamaster
