:pencil: grammar polish

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -3,7 +3,7 @@
   date: 7/10/20
   link: https://participatoryml.github.io/
 - header: PhD @ CMU
-  message: I'm excited to be joining Carnegie Mellon's Heinz College of Information Systems & Public Policy to start my PhD this fall. Thank you to all the wonderful people who helped me along the way!
+  message: I'm excited to join Carnegie Mellon's Heinz College of Information Systems & Public Policy to start my PhD this fall. Thank you to all the wonderful people who helped me along the way!
   date: 5/15/20
   link: https://www.heinz.cmu.edu
 - header: AIES-2020
