--- a/_data/research.yml
+++ b/_data/research.yml
@@ -1,5 +1,5 @@
-- id: current
-  subject: Current
+- id: publications
+  subject: Publications
   data:
     - title: Heuristic-Based Weak Learning for Automated Decision-Making
       date: 2020
@@ -13,9 +13,6 @@
       authors:
         - Aylin Caliskan
       meta: Under review.
-- id: publications
-  subject: Publications
-  data:
     - title: The Practice and Promise of Open Source Intelligence and Computational Security Studies
       date: 2017
       url: https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf
@@ -56,11 +53,11 @@
     # - title: Effect of Religious Diversity on Growth
     #   date: 2018
     #   url: docs/religious-growth.pdf
-    - title: The Derivative Relational Attribute Graph Model for Link Prediction
-      date: 2017
-      url: docs/drag.pdf
-      authors:
-        - W. A. Rivera
+    # - title: The Derivative Relational Attribute Graph Model for Link Prediction
+    #   date: 2017
+    #   url: docs/drag.pdf
+    #   authors:
+    #     - W. A. Rivera
     # - title: "Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza"
     #   date: 2018
     #   url: docs/descartes-spinoza.pdf
@@ -75,8 +72,14 @@
     #   url: docs/plato-popper.pdf
     #   meta: Winner of the GWU Strasser Writing Prize.
 - id: talks
-  subject: Other Presentations & Curriculum
+  subject: Presentations & Curriculum
   data:
+    - title: Heuristic-Based Weak Learning for Moral Decision-Making
+      date: 2020
+      meta: Poster presentation at Participatory Approaches to Machine Learning @ ICML 2020.
+      url: talks/paml
+      authors:
+        - Ben Williams
     - title: "The Grand Narrative: A History of Economics Through Data"
       meta: Curriculum.
       date: 2020
