:pencil: Updated link direct to video

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,7 +1,7 @@
 - header: SolveForGood DataFest
   message: This summer, I contributed to an awesome transparency tool for the Cook County Assessor's Office. Check out our presentation at the SolveForGood DataFest!
   date: 09/14/2020
-  link: https://t.co/jvRSJ8i7ls?amp=1
+  link: https://www.loom.com/share/4f06b30071ba44b6a5d924b0d05eb597
 - header: PAML @ ICML 2020
   message: Our paper was accepted to the Participatory Approaches to Machine Learning workshop! We propose and test an alternative way to elicit & incorporate stakeholder preferences in ML systems.
   date: 07/10/2020
