--- a/_data/research.yml
+++ b/_data/research.yml
@@ -1,5 +1,22 @@
+- id: preprints
+  subject: Working Papers
+  open: True
+  data:
+    - title: Image Representations Learned With Unsupervised Pre-Training Contain Human-like Biases 
+      date: 2020
+      url: https://arxiv.org/abs/2010.15052
+      authors:
+        - Aylin Caliskan
+      meta: Under review.
+    - title: A Set of Distinct Facial Traits Learned by Machines Is Not Predictive of Appearance Bias in the Wild 
+      date: 2020
+      url: http://arxiv.org/abs/2002.05636
+      authors:
+        - Aylin Caliskan
+      meta: Under review.
 - id: publications
   subject: Publications
+  open: True
   data:
     - title: Heuristic-Based Weak Learning for Automated Decision-Making
       date: 2020
@@ -7,12 +24,6 @@
       url: https://arxiv.org/abs/2005.02342
       authors:
         - Ben Williams
-    - title: Machines Learn Appearance Bias in Face Recognition
-      date: 2020
-      url: http://arxiv.org/abs/2002.05636
-      authors:
-        - Aylin Caliskan
-      meta: Under review.
     - title: The Practice and Promise of Open Source Intelligence and Computational Security Studies
       date: 2017
       url: https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf
