:arrow_upper_right: Removed bad URL

--- a/_data/research.yml
+++ b/_data/research.yml
@@ -25,7 +25,7 @@
         - Ben Williams
     - title: The Practice and Promise of Open Source Intelligence and Computational Security Studies
       date: 2017
-      url: https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf
+      # url: https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf
       meta: International Studies Association South Annual Conference, Orlando.
       authors:
         - W. A. Rivera
