--- a/_data/research.yml
+++ b/_data/research.yml
@@ -13,10 +13,10 @@
       meta: Proceedings of the ACM Conference on Fairness, Accountability, and Transparency (FAccT 2021).
     - title: A Set of Distinct Facial Traits Learned by Machines Is Not Predictive of Appearance Bias in the Wild 
       date: 2021
-      url: http://arxiv.org/abs/2002.05636
+      url: https://link.springer.com/article/10.1007/s43681-020-00035-y
       authors:
         - Aylin Caliskan
-      meta: Forthcoming in <i style="font-style:normal">AI and Ethics</i>.
+      meta: AI Ethics.
     - title: Heuristic-Based Weak Learning for Automated Decision-Making
       date: 2020
       meta: Participatory Approaches to Machine Learning @ ICML 2020.
