:arrow_upper_right: CV update with pub ref

--- a/_data/research.yml
+++ b/_data/research.yml
@@ -13,7 +13,7 @@
       meta: Proceedings of the ACM Conference on Fairness, Accountability, and Transparency (FAccT 2021).
     - title: A Set of Distinct Facial Traits Learned by Machines Is Not Predictive of Appearance Bias in the Wild 
       date: 2021
-      url: https://link.springer.com/article/10.1007/s43681-020-00035-y
+      url: https://doi.org/10.1007/s43681-020-00035-y
       authors:
         - Aylin Caliskan
       meta: AI Ethics.
