--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- header: Summer '21
+  date: 2021-05-17
+  message: I'll be joining Oracle to work on fairness & bias as a research intern this summer.
 - header: FAccT 2021
   date: 2021-03-05
   message: I'm (virtually) attending FAccT 2021 and presenting our paper on unsupervised bias in computer vision - DM me on Twitter or in the conference platform if you want to chat!
